--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,21 +16,21 @@
 
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">ニックネーム</label>
+      <label for="nickname" class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
     <%= f.text_area :hoge, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス</label>
+      <label for="email" class="form-text">メールアドレス</label>
       <span class="indispensable">必須</span>
     </div>
     <%= f.email_field :hoge, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">パスワード</label>
+      <label for="password" class="form-text">パスワード</label>
       <span class="indispensable">必須</span>
     </div>
     <%= f.password_field :hoge, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
@@ -38,7 +38,7 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
+      <label for="password-confirmation" class="form-text">パスワード(確認)</label>
       <span class="indispensable">必須</span>
     </div>
     <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
@@ -53,7 +53,7 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">お名前(全角)</label>
+      <label for="last-name" class="form-text">お名前(全角)</label>
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
@@ -63,7 +63,7 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">お名前カナ(全角)</label>
+      <label for="last-name-kana" class="form-text">お名前カナ(全角)</label>
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
@@ -73,7 +73,7 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">生年月日</label>
+      <label for="user_birth_date_1i" class="form-text">生年月日</label>
       <span class="indispensable">必須</span>
     </div>
     <div class='input-birth-wrap'>
@@ -87,7 +87,7 @@
                     start_year: 1930,
                     end_year: (Time.now.year - 5),
                     date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+                  "<p> <label for="user_birth_date_1i">年</label> </p>", "<p> <label for="user_birth_date_2i">月</label> </p>") + "<p> <label for="user_birth_date_3i">日</label> </p>" %>
     </div>
     <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
   </div>
